GPU: Python crash in background mode #102845

Closed
opened 2022-11-29 11:31:28 +01:00 by Raimund Klink · 8 comments
Contributor

System Information
Operating system: Windows-11-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98

Blender Version
Broken: version: 3.0 3.1, 3.2, 3.3.1, 3.4, 3.5
Worked: 2.83, 2.93

Short description of error
Launch this small script in background mode to crash Blender:
.\blender.exe -b -P C:\Users\raimund.klink\Downloads\crash.py

### Getting info about the GPU (driver etc.)
try:
    print('Print GPU:')
    import gpu
    print('gpu.platform.renderer_get:', gpu.platform.renderer_get())
    print('gpu.platform.vendor_get:', gpu.platform.vendor_get())
    print('gpu.platform.version_get:', gpu.platform.version_get())
    print('gpu.platform.device_type_get:', gpu.platform.device_type_get())
except:
    print('Printing of gpu.platform.x failed.')

Exact steps for others to reproduce the error

crash.py
#102845.blend
blender.crash.txt

**System Information** Operating system: Windows-11-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 526.98 **Blender Version** Broken: version: 3.0 3.1, 3.2, 3.3.1, 3.4, 3.5 Worked: 2.83, 2.93 **Short description of error** Launch this small script in background mode to crash Blender: `.\blender.exe -b -P C:\Users\raimund.klink\Downloads\crash.py` ``` ### Getting info about the GPU (driver etc.) try: print('Print GPU:') import gpu print('gpu.platform.renderer_get:', gpu.platform.renderer_get()) print('gpu.platform.vendor_get:', gpu.platform.vendor_get()) print('gpu.platform.version_get:', gpu.platform.version_get()) print('gpu.platform.device_type_get:', gpu.platform.device_type_get()) except: print('Printing of gpu.platform.x failed.') ``` **Exact steps for others to reproduce the error** [crash.py](https://archive.blender.org/developer/F13978349/crash.py) [#102845.blend](https://archive.blender.org/developer/F13978356/T102845.blend) [blender.crash.txt](https://archive.blender.org/developer/F13978358/blender.crash.txt)
Author
Contributor

Added subscriber: @Raimund58

Added subscriber: @Raimund58

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

The problem is that the gpu module (implemented in C++) is not initialized in background mode.
So the API in python should not work.
There are plans to change this and initialize a gpu context in background.

The problem is that the gpu module (implemented in C++) is not initialized in background mode. So the API in python should not work. There are plans to change this and initialize a gpu context in background.

This issue was referenced by d7f124f06f

This issue was referenced by d7f124f06f3fda59523ed05f12d1f4af6a523ba6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2022-11-29 17:56:41 +01:00
Author
Contributor

Hi @mano-wii
Thank you for fixing the crash.
Is there already a task for gpu module improvement in background mode? Can point me to the task, please?

On a side note, is #102738 (crash when running python in background mode and calling region_3d.update()) related to this bug?

Hi @mano-wii Thank you for fixing the crash. Is there already a task for gpu module improvement in background mode? Can point me to the task, please? On a side note, is #102738 (crash when running python in background mode and calling region_3d.update()) related to this bug?

We have this for example #84675 (Batch Rendering Crashes if EEVEE set in scene).
Eevee Next will come with some changes to the DRW manager that will allow you to create a GPU context in background.
But maybe it is not created by default in background mode (for performance reasons).

We have this for example #84675 (Batch Rendering Crashes if EEVEE set in scene). Eevee Next will come with some changes to the DRW manager that will allow you to create a GPU context in background. But maybe it is not created by default in background mode (for performance reasons).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102845
No description provided.