source/blender/python/gpu/gpu_py.h
@@ -9,15 +9,5 @@
 extern struct PyC_StringEnumItems bpygpu_primtype_items[];
 extern struct PyC_StringEnumItems bpygpu_dataformat_items[];
 
-bool bpygpu_is_init_or_error(void);
-
-#define BPYGPU_IS_INIT_OR_ERROR_OBJ \
-  if (UNLIKELY(!bpygpu_is_init_or_error())) { \
-    return NULL; \
-  } \
-  ((void)0)
-#define BPYGPU_IS_INIT_OR_ERROR_INT \
-  if (UNLIKELY(!bpygpu_is_init_or_error())) { \
-    return -1; \
-  } \
-  ((void)0)
+PyObject *bpygpu_create_module(PyModuleDef *module_type);
+int bpygpu_finalize_type(PyTypeObject *py_type);
